--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.no-bottom {
+  margin-bottom: 0px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .App {
   text-align: center;
 }
